--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <script src="https://unpkg.com/react-day-picker/lib/daypicker.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/react-day-picker/lib/style.css">
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
