--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Prosto+One" rel="stylesheet">
 
-    <title>React Auth</title>
+    <title>James-TV-Guide</title>
 
   </head>
   <body>
